Small addition our page content.

--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,6 @@
 	<title>Hello Super Mario</title>
 </head>
 <body>
-<h1>hello luigi</h1>
+<h1>hello luigi how is the princess</h1>
 </body>
 </html>
