--- a/site/index.html
+++ b/site/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
 <h1>hello luigi how is the princess</h1>
-</body>keyoshi and the princess doing what they can
+</body>keyoshi and the princess gonna make it...
+<body>mario and luigi doing what they can</body>
 </html>
