Small addition to our content.

--- a/site/index.html
+++ b/site/index.html
@@ -9,4 +9,5 @@
 <h1>hello luigi how is the princess</h1>
 </body>keyoshi and the princess gonna make it...
 <body>mario and luigi doing what they can</body>
+<h1>Danny phantom</h1>
 </html>
