Small addition to my content.

--- a/site/index.html
+++ b/site/index.html
@@ -10,5 +10,5 @@
 </body>keyoshi and the princess gonna make it...
 <body>mario and luigi doing what they can</body>
 <h1>Danny phantom</h1>
-<body>he wasjust 14 when his parents built a weird machine...</body>
+<body>he wasjust 14 when his parents built a weird machine... his  gonna catch a cold danny phantom, his gonna catch a cold danny phantom</body>
 </html>
