--- a/site/Mario.html
+++ b/site/Mario.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Precious mum's list</title>
+	<title>Precious mums list</title>
 
 </head>
 <body>
