--- a/site/index.html
+++ b/site/index.html
@@ -6,9 +6,23 @@
 	<title>Hello Super Mario</title>
 </head>
 <body>
-<h1>hello luigi how is the princess</h1>
+<h1>Mario and luigi internal links &copy;</h1>
 </body>keyoshi and the princess gonna make it...
 <body>mario and luigi doing what they can</body>
-<h1>Danny phantom</h1>
-<body>he wasjust 14 when his parents built a weird machine... his  gonna catch a cold danny phantom, his gonna catch a cold danny phantom</body>
+<h1>Danny phantom he his &lt; the gohst he faces</h1>
+<body>he wasjust 14 when his parents built a weird machine... his  gonna catch a cold danny phantom, his gonna catch&nbsp;a&nbsp;cold&nbsp;danny</body>
+<section>
+	A portal to the ghost world:
+	<a href="Mario.html" title="same dir link">Mrs Akwuruoha's list</a>
+
+	<a href="Mario.html" title="same-dir link">
+		<div> Shopping list</div>
+	</a>
+
+		<section>
+
+				lets add an external link:
+
+				<a href="http://www.brazzers.com/milf" target="_blank" title="like her page!">Mrs Akwuruoha's videos </a>
+
 </html>
