small addition to the content.

--- a/site/index.html
+++ b/site/index.html
@@ -25,4 +25,7 @@
 
 				<a href="http://www.brazzers.com/milf" target="_blank" title="like her page!">Mrs Akwuruoha's videos </a>
 
+<p>
+	<img src="IMG_20230120_192414_730" width="400" height="235" alt="Mrs akwuruoha">
+
 </html>
