small addition to the site.

--- a/site/index.html
+++ b/site/index.html
@@ -26,6 +26,12 @@
 				<a href="http://www.brazzers.com/milf" target="_blank" title="like her page!">Mrs Akwuruoha's videos </a>
 
 <p>
-	<img src="IMG_20230120_192414_730" width="400" height="235" alt="Mrs akwuruoha">
-
+	<img src="IMG_20230120_192414_730.jpg" width="400" height="235" alt="Mrs akwuruoha">&quot;
+	</p>
+</section>
+</section>
+<p>
+	<img src="https://lorempixel.com/output/nature-q-c-640-480-1.jpg" width="640" height="480">
+</p>
 </html>
+
