small addition to the site.

--- a/site/example folder.html
+++ b/site/example folder.html
@@ -4,6 +4,26 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title></title>
+	<style>
+		p{
+			color: olivedrab;
+			font-size: 26px;
+			width:200px;
+
+		}
+		h1{
+			color: blueviolet;
+			font font-size: 40px;
+			text-align: center;
+			font-style: revert;
+
+		}
+		h3{
+			color: darkred;
+			font-size: 40px;
+			font-style: italic;
+		}
+	</style>
 </head>
 <body>
 <h1 id="top">Links to Sections on The Same Page</h1>
