--- a/site/index.html
+++ b/site/index.html
@@ -4,13 +4,30 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Hello Super Mario</title>
+	<style>
+		p{
+			color: blue;
+			font-size: 20px;
+			width: 200px;
+		}
+
+	h1{
+		color: darkgreen;
+		font-size: 36px;
+		text-align: center;
+	}
+	</style>
 </head>
 <body>
 <h1>Mario and luigi internal links &copy;</h1>
+<p>
 </body>keyoshi and the princess gonna make it...
 <body>mario and luigi doing what they can</body>
 <h1>Danny phantom he his &lt; the gohst he faces</h1>
+<p>
 <body>he wasjust 14 when his parents built a weird machine... his  gonna catch a cold danny phantom, his gonna catch&nbsp;a&nbsp;cold&nbsp;danny</body>
+</p>
+</p>
 <section>
 	A portal to the ghost world:
 	<a href="Mario.html" title="same dir link">Mrs Akwuruoha's list</a>
@@ -26,12 +43,11 @@
 				<a href="http://www.brazzers.com/milf" target="_blank" title="like her page!">Mrs Akwuruoha's videos </a>
 
 <p>
-	<img src="IMG_20230120_192414_730.jpg" width="400" height="235" alt="Mrs akwuruoha">&quot;
-	</p>
-</section>
-</section>
-<p>
-	<img src="https://lorempixel.com/output/nature-q-c-640-480-1.jpg" width="640" height="480">
+	<img src="IMG_20230120_192414_730.jpg" width="400" height="235" alt="Mrs akwuruoha">
+	<img src="flower.jpg" width="640" height="480" alt="benz">
 </p>
-</html>
+
+
+
+
 
